# stephans_projekt

./: CMakeLists.txt
src/: main.cpp
src/stack/: CMakeLists.txt  stack.cpp  stack.hpp
test/: CMakeLists.txt  general_tests.cpp
